Assignment4: Refactor Visibility